website/i18n/ru/docusaurus-plugin-content-docs/version-0.0.28/concepts/write-path.md
---
title: "Путь записи и одобрение"
sidebar_position: 6
description: "Агенты предлагают, люди одобряют. Записывается только одобренная память, после чего обновляются индексы, граф, хэши и журнал изменений."
---

# Протокол памяти, контролируемый человеком

## Одобрение в чате с ИИ

В чате с ИИ-агентом одобрение Engram является разговорным. Сначала агент показывает уточненные кандидаты `TYPE: ... | TEXT: ...`, а для правил также варианты Light/Balanced/Strict. Ответьте `yes`, чтобы сохранить именно эти кандидаты, `audit`, чтобы их исправить, или `cancel`, чтобы остановить процесс. После `yes` агент использует `engram save-session --force` с точно одобренными кандидатами. Прямые сохранения через CLI по-прежнему используют A/B/C, если только команда accept-all не была вызвана явно.


Engram — это не просто «память агента». Это протокол, который делает память проверяемой, переносимой и управляемой людьми.

## Соглашение

Markdown — это долговечная память.

JSON-файлы индекса и графа — это слои ускорения работы.

Одобрение человеком — это граница доверия (trust boundary).

Хэши — это средства проверки целостности.

Правила исключения (ignore rules) — это средства контроля приватности.

Git обеспечивает переносимость и историю аудита изменений.

Адаптеры агентов обеспечивают удобство, но не являются источником власти.

Агенты могут предлагать информацию для памяти, но люди владеют тем, что в итоге записывается.

## Типы записей памяти

| Тип | Назначение |
| --- | --- |
| Rule | предпочтение пользователя, исправление, ограничение, руководство класса «всегда/никогда» |
| Skill | повторяющийся рабочий процесс, чек-лист, процедура, инструкция (runbook) |
| Knowledge | объективный факт проекта, архитектурное решение, деталь реализации |

Каждый активный файл памяти содержит разделы `Context`, `Content` и `Example`. Для правил (Rule) также устанавливаются строгие ограничения на количество строк, чтобы загружаемые инструкции оставались лаконичными и полезными.

## Поток записи (Write Flow)

1. Агент предлагает одного или нескольких кандидатов.
   С `save-session --query-level <n>` агент может учитывать до n доступных недавних сессий человек-агент, но только как контекст для предложений.
   Естественная форма `/engram ss -f last 50 sessions` использует ту же область и явное одобрение всех кандидатов: `engram save-session --query-level 50 --force`.
2. Engram анализирует тип кандидата и целевую область видимости (scope).
3. Engram проверяет схему разметки, ищет секреты, шаблоны промпт-инъекций и проверяет безопасность путей файлов.
4. Человек видит превью предлагаемых изменений.
5. Человек отвечает `A` (принять всё), `A 1,3` (принять выбранные), `B <комментарий>` (добавить заметку к принятому) или `C` (отклонить).
6. Записывается только одобренная память.
7. Индекс, граф, хэши и журнал изменений (changelog) обновляются.

## Поток чтения (Read Flow)

1. Engram загружает индекс проекта и опциональный глобальный индекс.
2. Записи из проекта переопределяют глобальные дубликаты с тем же `id`.
3. Правила исключения и фильтры ролей скрывают нерелевантные записи.
4. Маршрутизация на основе графа выбирает компактный пакет контекста.
5. Перед выводом содержимого выполняются проверки хэшей и безопасности.

## Почему это важно

Без протокола память ИИ-агентов превращается в скрытое состояние (invisible state). Скрытое состояние трудно анализировать, им тяжело делиться, и агенты могут легко и незаметно отравить его некорректными данными.

Engram делает память намеренно простой: файлы, дифы (diffs), хэши, шлюзы одобрения человеком и команды, которые человек может запустить повторно в терминале.

Далее: [Руководство по операциям](../cli/overview.md).

<!-- evidence-foundation:v3:start -->
## Память, подкреплённая доказательствами

New files use `schema_version: 3`. Rule and skill memories default to `authority: instruction`; knowledge defaults to `authority: reference`. `revision` starts at 1 and increments on updates. Trace IDs belong in `evidence_refs`, while session or source identities belong in `derived_from`. Legacy v1 (`Context` + `Content` + `Example`) and v2 (`Content`, optional `Origin`) remain readable. Traces live in `.agents/.engram/traces/` with `traces/<trace-id>.jsonl` files recording `engram observe --file` and `save-session --file` provenance, `trust_level`, `sensitivity`, and `retention`.
Traces are assigned a unique `trace_id`.
<!-- evidence-foundation:v3:end -->
